Fixed lists overflowing wrapping container

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -89,6 +89,7 @@ form#search-bar-form input#submitDashboard {
 .task-box {
   box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
   margin: 16px;
+  overflow: auto;
 }
 
 h2
@@ -100,6 +101,7 @@ h2
 .task-box h2 {
   background-color: #f7f7f7;
   padding: 16px 16px 8px;
+  margin-bottom: 0;
 }
 
 
